--- a/app/src/main/res/layout/row_film_grid.xml
+++ b/app/src/main/res/layout/row_film_grid.xml
@@ -1,7 +1,7 @@
 <?xml version="1.0" encoding="utf-8"?>
-
-<android.support.v7.widget.CardView android:id="@+id/bg_desc"
+<android.support.v7.widget.CardView
     xmlns:android="http://schemas.android.com/apk/res/android"
+    android:id="@+id/bg_desc"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
     android:layout_margin="2dp">
@@ -14,13 +14,13 @@
             android:clickable="true">
 
             <FrameLayout
-                android:background="@color/windowBackgroundImage"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content">
 
             <ImageView
+                android:scaleType="fitXY"
                 android:layout_width="match_parent"
-                android:layout_height="wrap_content"
+                android:layout_height="match_parent"
                 android:id="@+id/img_poster" />
 
             </FrameLayout>
