--- a/app/src/main/res/xml/pref_general.xml
+++ b/app/src/main/res/xml/pref_general.xml
@@ -10,4 +10,11 @@
         android:key="@string/pref_sort_key"
         android:title="@string/pref_sort_label"/>
 
+    <ListPreference
+        android:defaultValue="@string/pref_theme_dark"
+        android:entries="@array/pref_theme_options"
+        android:entryValues="@array/pref_theme_values"
+        android:key="@string/pref_theme_key"
+        android:title="@string/pref_theme_label"/>
+
 </PreferenceScreen>
