--- a/app/src/main/res/layout/row_company_grid.xml
+++ b/app/src/main/res/layout/row_company_grid.xml
@@ -4,8 +4,7 @@
             android:layout_margin="4dp"
             android:orientation="vertical"
             android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:background="@color/colorPrimary">
+            android:layout_height="wrap_content">
 
             <ImageView
                 android:layout_alignParentTop="true"
