--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -1,38 +1,24 @@
-<resources>
+<resources xmlns:tools="http://schemas.android.com/tools">
 
     --------------------------------------------------------------------------------------
 
-    <style name="AppTheme" parent="AppThemeDark.Base">
-        <!-- Base application theme.
-             Defining this lets values-v21/styles.xml reuse it with changes. -->
-    </style>
-
-    <style name="AppThemeDark.Base" parent="Theme.AppCompat.NoActionBar">
+    <style name="AppThemeLight.Base" parent="Theme.AppCompat.Light.NoActionBar">
         <!-- colorPrimary is used, for instance, for the default ActionBar
              (but not Toolbar) background.
               We specify the same color for the toolbar background in
               toolbar.xml.. -->
-        <item name="colorPrimary">@color/colorPrimary</item>
+        <item name="colorPrimary">@color/colorPrimaryL</item>
 
         <!-- colorPrimaryDark is used for the status bar (with the
              battery, clock, etc). -->
-        <item name="colorPrimaryDark">@color/colorPrimaryDark</item>
+        <item name="colorPrimaryDark">@color/colorPrimaryDarkL</item>
 
         <!-- colorAccent is used as the default value for
              colorControlActivated which is used to tint widgets. -->
         <item name="colorAccent">@color/colorAccent</item>
-        <item name="android:colorBackground">@color/windowBackground</item>
-        <item name="android:actionOverflowButtonStyle">@style/MyActionButtonOverflow</item>
-        <item name="actionOverflowButtonStyle">@style/MyActionButtonOverflow</item>
-    </style>
-
-    <style name="MyActionButtonOverflow" parent="android:style/Widget.Holo.ActionButton.Overflow">
-        <item name="android:src">@drawable/ic_more_vert_white_24dp</item>
-    </style>
-
-    --------------------------------------------------------------------------------
-
-    <style name="ThemeToolbarOverflowDark" parent="AppThemeDark.Base">
+        <item name="android:colorBackground">@color/windowBackgroundLight</item>
+        <item name="android:actionOverflowButtonStyle">@style/MyActionButtonOverflowDark</item>
+        <item name="actionOverflowButtonStyle">@style/MyActionButtonOverflowDark</item>
         <!-- android:textColorPrimary is the  color of the title text
              in the Toolbar, in the Theme.AppCompat theme:  -->
         <item name="android:textColorPrimary">@color/colorTextDark</item>
@@ -57,11 +43,28 @@
               but setting this also changes the popup menu's background,
               even if we define popupTheme for our <Toolbar> -->
         <!-- <item name="android:background">@color/color_primary</item> -->
+
     </style>
 
     --------------------------------------------------------------------------------
 
-    <style name="ThemeToolbarOverflowLight" parent="AppThemeDark.Base">
+    <style name="AppThemeDark.Base" parent="Theme.AppCompat.NoActionBar">
+        <!-- colorPrimary is used, for instance, for the default ActionBar
+             (but not Toolbar) background.
+              We specify the same color for the toolbar background in
+              toolbar.xml.. -->
+        <item name="colorPrimary">@color/colorPrimaryD</item>
+
+        <!-- colorPrimaryDark is used for the status bar (with the
+             battery, clock, etc). -->
+        <item name="colorPrimaryDark">@color/colorPrimaryDarkD</item>
+
+        <!-- colorAccent is used as the default value for
+             colorControlActivated which is used to tint widgets. -->
+        <item name="colorAccent">@color/colorAccent</item>
+        <item name="android:colorBackground">@color/windowBackgroundDark</item>
+        <item name="android:actionOverflowButtonStyle">@style/MyActionButtonOverflowLight</item>
+        <item name="actionOverflowButtonStyle">@style/MyActionButtonOverflowLight</item>
         <!-- android:textColorPrimary is the  color of the title text
              in the Toolbar, in the Theme.AppCompat theme:  -->
         <item name="android:textColorPrimary">@color/colorTextLight</item>
@@ -88,8 +91,19 @@
         <!-- <item name="android:background">@color/color_primary</item> -->
     </style>
 
-    <style name="AppTheme.AppBarOverlay" parent="ThemeOverlay.AppCompat.Dark.ActionBar" />
+    --------------------------------------------------------------------------------
 
+    <style name="AppTheme.AppBarOverlay" parent="ThemeOverlay.AppCompat.Dark.ActionBar" />
     <style name="AppTheme.PopupOverlay" parent="ThemeOverlay.AppCompat.Light" />
+
+    --------------------------------------------------------------------------------
+
+    <style name="MyActionButtonOverflowLight" parent="android:style/Widget.Holo.ActionButton.Overflow">
+        <item name="android:src">@drawable/ic_more_vert_white_24dp</item>
+    </style>
+
+    <style name="MyActionButtonOverflowDark" parent="android:style/Widget.Holo.ActionButton.Overflow">
+        <item name="android:src">@drawable/ic_more_vert_black_24dp</item>
+    </style>
 
 </resources>
